1593213074 | 40 files | M bin/version.txt,  M drivers/htc/resources/localization/localization_el_GR.json,  M drivers/htc/resources/localization/localization_ko_KR.json,  M drivers/htc/resources/localization/localization_sv_SE.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions_tr_TR.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_greek.json,  M resources/webinterface/dashboard/localization/bindingui_italian.json,  M resources/webinterface/dashboard/localization/bindingui_japanese.json,  M resources/webinterface/dashboard/localization/bindingui_korean.json,  M resources/webinterface/dashboard/localization/bindingui_russian.json,  M resources/webinterface/dashboard/localization/bindingui_swedis
https://steamdb.info/patchnotes/5221789/

--- a/drivers/htc/resources/localization/localization_el_GR.json
+++ b/drivers/htc/resources/localization/localization_el_GR.json
@@ -27,5 +27,5 @@
 	"/pose/front_rolled": "Μπροστά και ανοιγμένο",
 	"/pose/front": "Μπροστά",
 	"/pose/pistol": "Λαβή πιστολιού",
-	"/pose/back": "Πίσω"
+	"/pose/back": "ΠΙΣΩ"
 }
