--- a/resources/webinterface/dashboard/localization/bindingui_greek.json
+++ b/resources/webinterface/dashboard/localization/bindingui_greek.json
@@ -2,26 +2,26 @@
   "language": "greek",
   "holographic_controller": "Χειριστήριο Windows μεικτής πραγματικότητας",
   "holographic_hmd": "Headset Windows μεικτής πραγματικότητας",
-  "SourceInputMode_UseAs": "Χρήση ως %1$s",
+  "SourceInputMode_UseAs": "ΧΡΗΣΗ ΩΣ %1$s",
   "SourceInputMode_SelectMode": "Χρήση %1$s ως %2$s...",
-  "SourceInputMode_none": "Αχρησιμοποίητο",
-  "SourceInputMode_button": "Κουμπί",
-  "SourceInputMode_trackpad": "Επιφάνεια αφής",
-  "SourceInputMode_joystick": "Μοχλός",
-  "SourceInputMode_complex_button": "Σύνθετο κουμπί",
-  "SourceInputMode_toggle_button": "Εναλλαγή κουμπιού",
-  "SourceInputMode_dpad_click": "Πάτημα DPAD",
-  "SourceInputMode_dpad_touch": "Άγγιγμα DPAD",
+  "SourceInputMode_none": "ΑΧΡΗΣΙΜΟΠΟΙΗΤΟ",
+  "SourceInputMode_button": "ΚΟΥΜΠΙ",
+  "SourceInputMode_trackpad": "ΕΠΙΦ. ΑΦΗΣ",
+  "SourceInputMode_joystick": "ΜΟΧΛΟΣ",
+  "SourceInputMode_complex_button": "ΣΥΝΘΕΤΟ ΚΟΥΜΠΙ",
+  "SourceInputMode_toggle_button": "ΚΟΥΜΠΙ ΕΝΑΛΛΑΓΗΣ",
+  "SourceInputMode_dpad_click": "ΠΑΤΗΜΑ DPAD",
+  "SourceInputMode_dpad_touch": "ΑΓΓΙΓΜΑ DPAD",
   "SourceInputMode_dpad": "DPAD",
-  "SourceInputMode_radial": "Κυκλικό μενού",
-  "SourceInputMode_scroll": "Κύλιση",
-  "SourceInputMode_Force_Sensor": "Δύναμη αισθητήρα",
-  "SourceInputMode_trigger": "Σκανδάλη",
-  "SourceInputMode_Click": "Πάτημα",
-  "SourceInputMode_TriggerClick": "Κλικ",
-  "SourceInputMode_Touch": "Άγγιγμα",
-  "SourceInputMode_Held": "Κρατημένο",
-  "SourceInputMode_Single": "Μονό",
+  "SourceInputMode_radial": "ΚΥΚΛΙΚΟ ΜΕΝΟΥ",
+  "SourceInputMode_scroll": "ΚΥΛΙΣΗ",
+  "SourceInputMode_Force_Sensor": "ΑΙΣΘΗΤΗΡΑΣ ΔΥΝΑΜΗΣ",
+  "SourceInputMode_trigger": "ΣΚΑΝΔΑΛΗ",
+  "SourceInputMode_Click": "ΚΛΙΚ",
+  "SourceInputMode_TriggerClick": "ΚΛΙΚ",
+  "SourceInputMode_Touch": "ΑΓΓΙΓΜΑ",
+  "SourceInputMode_Held": "ΚΡΑΤΗΜΕΝΟ",
+  "SourceInputMode_Single": "ΜΟΝΟ",
   "SourceInputMode_Double": "Διπλό",
   "SourceInputMode_Long": "Παρατεταμένο",
   "SourceInputMode_North": "Βόρεια",
@@ -241,8 +241,8 @@
   "SourceInputSubHeader_PoseActions": "Ενέργειες πόζας",
   "SourceInputSubHeader_HapticsActions": "Απτικές ενέργειες",
   "BindingUI_PoseTitle": "Διατάξεις στάσης",
-  "BindingUI_HapticsTitle": "Απτικές διατάξεις",
-  "BindingUI_SkeletonTitle": "Διατάξεις σκελετού",
+  "BindingUI_HapticsTitle": "ΑΠΤΙΚΕΣ ΔΕΣΜΕΥΣΕΙΣ",
+  "BindingUI_SkeletonTitle": "ΔΕΣΜΕΥΣΕΙΣ ΣΚΕΛΕΤΟΥ",
   "BindingUI_EditPoses": "Επεξεργασία στάσεων δράσης",
   "BindingUI_AddPoses": "Προσθήκη στάσης δράσης",
   "BindingUI_ViewPoses": "Προβολή στάσεων δράσης",
@@ -335,7 +335,7 @@
   "BindingUI_SaveDefaultName_Public": "Μοιρασμένη διάταξη από %1$s",
   "BindingUI_SaveDescriptionPlaceholder": "(Προαιρετικό)",
   "BindingUI_SelectThisBinding": "Επιλογή αυτής της διάταξης",
-  "BindingUI_EditThisBinding": "Επεξεργασία αυτής της διάταξης",
+  "BindingUI_EditThisBinding": "ΕΠΕΞΕΡΓΑΣΙΑ ΑΥΤΗΣ ΤΗΣ ΔΙΑΤΑΞΗΣ",
   "BindingUI_ImportThisBinding": "Εισαγωγή αυτής της διάταξης",
   "BindingUI_List_OldVersionWarning": "Αυτή η διάταξη έγινε με παλαιότερη έκδοση του %1$s και πρέπει να ενημερωθεί.",
   "BindingUI_List_OldVersionWarning_CurrentBinding": "Αυτή η διάταξη έγινε με παλαιότερη έκδοση του %1$s και μπορεί να μην περιέχει όλες τις απαραίτητες ενέργειες.",
@@ -353,7 +353,7 @@
   "AppSelect_LegacyDebug": "Παραδοσιακή καθυστέρηση αποσφαλμάτωσης",
   "AppSelect_ShowMoreApps": "Εμφάνιση περισσότερων εφαρμογών",
   "AppSelect_EditBindings": "Επεξεργασία διάταξης χειριστηρίου",
-  "BindingList_PageTitle": "Αλλαγή διατάξεων για %1$s",
+  "BindingList_PageTitle": "ΑΛΛΑΓΗ ΔΙΑΤΑΞΕΩΝ ΓΙΑ %1$s",
   "BindingList_ControllerOption": "Τρέχον χειριστήριο",
   "BindingUI_List_Delete_Confirm": "Μόνιμη διαγραφή της διάταξης %1$s;",
   "BindingUI_ConfirmSelect_Title": "Αντικατάσταση τρέχουσας διαμόρφωσης;",
@@ -432,7 +432,7 @@
   "DisplaySettings_EnableColumnCorrection": "Διόρθωση στήλης",
   "DisplaySettings_ColumnCorrectionOff": "Ανενεργό",
   "DisplaySettings_ColumnCorrectionAuto": "Αυτόματα",
-  "DisplaySettings_AdvancedSettings": "Προχωρημένες ρυθμίσεις",
+  "DisplaySettings_AdvancedSettings": "Προχωρ. ρυθμίσεις",
   "DisplaySettings_ShowAdvancedSettings": "Εμφάνιση προχωρημένων ρυθμίσεων",
   "DisplaySettings_HideAdvancedSettings": "Απόκρυψη προχωρημένων ρυθμίσεων",
   "DisplaySettings_ResetAdvancedSettings": "Χρήση προτεινόμενων προχωρημένων ρυθμίσεων",
@@ -463,8 +463,8 @@
   "Settings_ControllerSettings_Title": "Ρυθμίσεις μοχλού",
   "Settings_ControllerSettings_Utilities": "Δυνατότητες χειριστηρίου",
   "Settings_General_Cancel": "Άκυρο",
-  "Settings_General_Confirm": "Επιβεβαίωση",
-  "Settings_General_Calibrate": "Βαθμονόμηση",
+  "Settings_General_Confirm": "ΕΠΙΒΕΒΑΙΩΣΗ",
+  "Settings_General_Calibrate": "ΒΑΘΜΟΝΟΜΗΣΗ",
   "Settings_General_NotEnoughSamples": "Παρακαλούμε πιέστε πάνω το μοχλό τουλάχιστον ακόμα %1$s φορές για να ολοκληρωθεί η βαθμονόμηση.",
   "Settings_General_InviteMoreSamples": "Υπολογίστηκε γωνία %1$s μοιρών. Συνεχίστε να πιέζετε πάνω για να βελτιωθεί αυτή η τιμή ή πατήστε Επιβεβαίωση για να αποδεχθείτε αυτή τη βαθμονόμηση.",
   "Settings_General_LeftThumbstickAngle": "Γωνία αριστερού μοχλού: %1$s°",
