--- a/resources/webinterface/dashboard/localization/bindingui_italian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_italian.json
@@ -352,7 +352,7 @@
   "AppSelect_ControllerTester": "Prova controller",
   "AppSelect_LegacyDebug": "Debug input classici",
   "AppSelect_ShowMoreApps": "Mostra più applicazioni",
-  "AppSelect_EditBindings": "Modifica le associazioni dei controller",
+  "AppSelect_EditBindings": "Modifica associazioni controller",
   "BindingList_PageTitle": "Modifica le configurazioni per %1$s",
   "BindingList_ControllerOption": "Controller attuale",
   "BindingUI_List_Delete_Confirm": "Eliminare definitivamente la configurazione %1$s?",
@@ -372,7 +372,7 @@
   "BindingUI_SteamVRUnavailable": "Avvia SteamVR per continuare ad usare l'interfaccia di configurazione",
   "BindingUI_ErrorLoadingBindingTitle": "Impossibile caricare il file di configurazione",
   "input_binding_load_failed": "Impossibile caricare le associazioni di input per %1$s. Seleziona un'altra opzione di associazione.",
-  "input_binding_load_failed_no_url": "L'assegnazione di %2$s per %1$s non è stata impostata. Seleziona un'opzione di assegnazione dalla lista o creane una nuova.",
+  "input_binding_load_failed_no_url": "L'associazionedi %2$s per %1$s non è stata impostata. Seleziona un'opzione di associazione dalla lista o creane una nuova.",
   "input_binding_load_below_minimum_version": "La configurazione %2$s per %1$s proviene dalla versione precedente di %1$s. Le tue configurazioni sono state impostate sui valori predefiniti.",
   "unknown_application": "Applicazione sconosciuta",
   "TestController_Title": "Prova i controller",
@@ -398,7 +398,7 @@
   "InputDebugger_FilterDetails": "Dettagli del filtro",
   "InputDebugger_FilterState_Title": "Stato del filtro per %1$s",
   "InputDebugger_Source": "Sorgente:",
-  "InputDebugger_Binding": "Assegnazione:",
+  "InputDebugger_Binding": "Associazione:",
   "InputDebugger_Active": "Attivo:",
   "InputDebugger_ActiveOrigin": "Origine:",
   "InputDebugger_UpdateTime": "Ultimo aggiornamento:",
@@ -411,7 +411,7 @@
   "InputDebugger_PriorityValue": "(Priorità %1$s)",
   "InputDebugger_Suppressed": "Soppresso",
   "InputDebugger_Priority_Overlay": "Globale + %1$s",
-  "BindingUI_WindowTitle_ControllerSettings": "Impostazioni dei controller",
+  "BindingUI_WindowTitle_ControllerSettings": "Impostazioni controller",
   "BindingUI_WindowTitle_ControllerBinding": "Associazioni dei controller",
   "BindingUI_WindowTitle_DisplaySettings": "Impostazioni dello schermo",
   "ActionManifestError_ManifestParseError": "Problema con il manifesto delle azioni per %1$s: \"%2$s\".",
