--- a/resources/webinterface/dashboard/localization/bindingui_japanese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_japanese.json
@@ -103,10 +103,10 @@
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "オプションで、力覚センサー（加えられている力の量）、または静電容量センサー（指との距離）からこれの値を取得します。",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "指がグリップに近づいたことでつかみ動作が有効になる距離。",
   "SourceInputMode_GrabThreshold_tooltip": "静電容量センサーと力覚センサー用の組み合わせた有効化しきい値。",
-  "SourceInputMode_ReleaseThreshold_tooltip": "静電容量センサーと力覚センサー用の組み合わせた無効化しきい値。",
+  "SourceInputMode_ReleaseThreshold_tooltip": "静電容量センサーと力覚センサーを合わせた無効化しきい値。",
   "SourceInputMode_ForceHoldThreshold_tooltip": "アクション有効化のために適用される必要がある圧力レベル。（通常、静電容量センシングが最初に発生）",
   "SourceInputMode_ForceReleaseThreshold_tooltip": "アクションを無効化するために解放する必要がある圧力レベル。",
-  "SourceInputMode_DowngradeSpeed_tooltip": "力のつかみ動作しきい値を超えた後、静電容量センシングのしきい値だけを超えた状態で、コントローラを移動してつかむ動作を維持できる最大速度（m/s）。",
+  "SourceInputMode_DowngradeSpeed_tooltip": "力覚センサーのつかみ動作しきい値を超えた後、静電容量センシングのしきい値だけを超えた状態で、コントローラを移動してつかみ動作を維持できる最大速度（m/s）。",
   "SourceInputMode_DropSpeed_tooltip": "圧力を解放したが、静電容量センシング無効化のしきい値を超えていない時に、コントローラを移動して強制的にドロップできる最小速度（m/s）。",
   "SourceInputMode_ScalarValue_tooltip": "ブール値に基づいてアナログアクションを設定。（例：Aボタンを押した時にトリガープルを1に設定）",
   "SourceInputMode_ScalarOnX_tooltip": "このコントロールが有効になった時に設定されるアナログX値。（例：ボタンを押す）",
@@ -310,7 +310,7 @@
   "BindingUI_List_Delete": "削除",
   "BindingUI_List_Edit": "編集",
   "BindingUI_List_View": "表示",
-  "BindingUI_List_Select": "Activate",
+  "BindingUI_List_Select": "有効化する",
   "BindingUI_List_LastUpdated": "最終更新：",
   "BindingUI_List_MinutesPlayed": "合計%1$s分プレイしました",
   "BindingUI_List_MinutesPlayedThisMonth": "過去30日間に%1$s分プレイしました",
