--- a/resources/webinterface/dashboard/localization/bindingui_swedish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_swedish.json
@@ -18,7 +18,7 @@
   "SourceInputMode_Force_Sensor": "Trycksensor",
   "SourceInputMode_trigger": "Avtryckare",
   "SourceInputMode_Click": "Klick",
-  "SourceInputMode_TriggerClick": "Klick",
+  "SourceInputMode_TriggerClick": "Klicka",
   "SourceInputMode_Touch": "Beröring",
   "SourceInputMode_Held": "Hållen",
   "SourceInputMode_Single": "Enkel",
@@ -30,7 +30,7 @@
   "SourceInputMode_West": "Väst",
   "SourceInputMode_Center": "Mitten",
   "SourceInputMode_Scroll": "Skrollning",
-  "SourceInputMode_Trackpad_Scroll": "Skrollning",
+  "SourceInputMode_Trackpad_Scroll": "Skrolla",
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Dra",
   "SourceInputMode_Force": "Kraft",
@@ -50,21 +50,21 @@
   "SourceInputMode_TouchInitialState": "Beröringsåtgärd hålls initialt:",
   "SourceInputMode_OverlapPercent": "Överlappningsprocent:",
   "SourceInputMode_DeadzonePercent": "Dödzonsprocent:",
-  "SourceInputMode_Maxzone": "Max zone Percentage:",
+  "SourceInputMode_Maxzone": "Maximal zonprocent:",
   "SourceInputMode_Exponent": "Exponentialkurva:",
   "SourceInputMode_StickyDpad": "Behåll styrkorsåtgärd vid aktivering",
   "SourceInputMode_LongPressDelay": "Fördröjning vid långt tryck:",
   "SourceInputMode_DoublePressDelay": "Fördröjning vid dubbeltryck:",
   "SourceInputMode_DeadZone": "Dödzon",
-  "SourceInputMode_button_tooltip": "Använd denna kontroll som en knapp. Hanterar beröringar, klickar, hållningar, dubbelklickar och långa tryck.",
-  "SourceInputMode_trackpad_tooltip": "Använd denna kontroll som en spårplatta. XY-positionering, beröringar och tryck.",
-  "SourceInputMode_joystick_tooltip": "Använd denna kontroll som en styrspak. XY-positionering, beröringar och tryck.",
+  "SourceInputMode_button_tooltip": "Använd denna kontroll som en knapp. Kan hantera beröring, klickning, hållning, dubbelklickning och långa tryck.",
+  "SourceInputMode_trackpad_tooltip": "Använd denna kontroll som en spårplatta. XY-placering, beröring och tryck.",
+  "SourceInputMode_joystick_tooltip": "Använd denna kontroll som en styrspak. XY-placering, beröring och tryck.",
   "SourceInputMode_toggle_button_tooltip": "Använd denna kontroll som en växel. Ett tryck för på, ett tryck för av.",
-  "SourceInputMode_dpad_click_tooltip": "Use this control like a DPAD being clicked. Clicks in North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_touch_tooltip": "Use this control like a DPAD being touched. North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_tooltip": "Use this control like a DPAD being clicked or touched. Split up in North, East, South, and West quadrants.",
-  "SourceInputMode_scroll_tooltip": "Use this control as a scroll wheel. Reports horizontal and vertical scrolling amounts.",
-  "SourceInputMode_Force_Sensor_tooltip": "Gives analog actions a 0-1 value indicating how much force the user is applying to the control.",
+  "SourceInputMode_dpad_click_tooltip": "Använd denna kontroll som ett klick på ett styrkors. Klicka i norra, östra, södra eller västra kvadranten.",
+  "SourceInputMode_dpad_touch_tooltip": "Använd denna kontroll som beröring av ett styrkors. Rör vid norra, östra, södra eller västra kvadranten.",
+  "SourceInputMode_dpad_tooltip": "Använd denna kontroll som beröring av eller klickande på ett styrkors. Klicka eller rör vid norra, östra, södra eller västra kvadranten.",
+  "SourceInputMode_scroll_tooltip": "Använd denna kontroll som ett skrollhjul. Anger horisontella och vertikala skrollvärden.",
+  "SourceInputMode_Force_Sensor_tooltip": "Ger analoga åtgärder ett värde mellan 0 och 1 som indikerar hur stor kraft användaren använder för denna kontroll.",
   "SourceInputMode_trigger_tooltip": "Use this control as if it was a trigger. Touch (or any press), Click if there is a physical click at the end of the trigger, and the amount (0-1) the trigger is depressed.",
   "SourceInputMode_Grab_tooltip": "Combines capacitive sensors and force sensors to report a more reliable grab.",
   "SourceInputMode_Scalar_Constant_tooltip": "Allows you to use a digital (on/off) control to set an analog (0-1) value.",
