--- a/resources/webinterface/dashboard/localization/dashboard_czech.json
+++ b/resources/webinterface/dashboard/localization/dashboard_czech.json
@@ -2,7 +2,7 @@
   "UI_Unknown": "Neznámý",
   "Now_Starting": "Další na řadě",
   "Now_Starting_HomeApp": "Návrat domů k:",
-  "Now_Playing": "Je spuštěno:",
+  "Now_Playing": "Aktivní aplikace",
   "Now_Playing_HomeApp": "Domů",
   "Now_Quitting": "Je ukončováno:",
   "Now_Waiting": "Čekání...",
