--- a/resources/webinterface/dashboard/localization/dashboard_greek.json
+++ b/resources/webinterface/dashboard/localization/dashboard_greek.json
@@ -24,12 +24,12 @@
   "Exit_SteamVR_Home": "Τερματισμός SteamVR Home",
   "Exit_Game": "Τερματισμός παιχνιδιού",
   "Menu": "Μενού",
-  "Desktops": "Επιτραπέζιοι",
+  "Desktops": "Επ. εργασίας",
   "Volume": "Ένταση",
   "X_More_Overlays": "%1$s ακόμα επικαλύψεις",
   "Store": "Κατάστημα",
   "BrowseAllGames": "Περιήγηση όλων των παιχνιδιών",
-  "BrowseAll": "Περιήγηση όλων",
+  "BrowseAll": "ΠΕΡΙΗΓΗΣΗ ΟΛΩΝ",
   "StoreSection_TopSingleplayer": "Κορυφαία ενός παίκτη",
   "StoreSection_TopMultiplayer": "Κορυφαία πολλών παικτών",
   "StoreSection_TopFree": "Κορυφαία δωρεάν",
