--- a/resources/webinterface/dashboard/localization/dashboard_italian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_italian.json
@@ -37,7 +37,7 @@
   "RecentlyPlayed": "Giocati di recente",
   "Return_To_Game": "Torna al gioco",
   "Return_To_Home": "Torna alla pagina iniziale",
-  "Controller_Bindings": "Assegnazioni del controller",
+  "Controller_Bindings": "Associazioni controller",
   "App_Video_Settings": "Impostazioni video",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
