--- a/resources/webinterface/dashboard/localization/dashboard_japanese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_japanese.json
@@ -19,7 +19,7 @@
   "AudioMirrorVolume": "オーディオミラー音量",
   "MuteMicrophone": "マイクをミュート",
   "UnmuteMicrophone": "マイクをミュート解除",
-  "MicrophoneVolume": "Microphone Volume",
+  "MicrophoneVolume": "マイク音量",
   "SteamVR_Home": "SteamVRホーム",
   "Exit_SteamVR_Home": "SteamVRホームを終了",
   "Exit_Game": "ゲームを終了",
