--- a/resources/webinterface/dashboard/localization/dashboard_korean.json
+++ b/resources/webinterface/dashboard/localization/dashboard_korean.json
@@ -19,7 +19,7 @@
   "AudioMirrorVolume": "오디오 복제 음량",
   "MuteMicrophone": "마이크 음소거",
   "UnmuteMicrophone": "마이크 음소거 해제",
-  "MicrophoneVolume": "Microphone Volume",
+  "MicrophoneVolume": "마이크 볼륨",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "SteamVR Home 나가기",
   "Exit_Game": "게임 나가기",
@@ -30,9 +30,9 @@
   "Store": "상점",
   "BrowseAllGames": "모든 게임 검색",
   "BrowseAll": "모두 검색",
-  "StoreSection_TopSingleplayer": "최상위 싱글플레이어",
-  "StoreSection_TopMultiplayer": "최상위 멀티플레이어",
-  "StoreSection_TopFree": "최상위 무료 게임",
+  "StoreSection_TopSingleplayer": "인기 싱글플레이 게임",
+  "StoreSection_TopMultiplayer": "인기 멀티플레이 게임",
+  "StoreSection_TopFree": "인기 무료 게임",
   "Library": "라이브러리",
   "RecentlyPlayed": "최근 플레이",
   "Return_To_Game": "게임으로 돌아가기",
@@ -51,7 +51,7 @@
   "Unmute_Headset": "헤드셋 소리 켜기",
   "WelcomeHeader": "게임이 없으세요?",
   "WelcomeMessage": "하드웨어 교체에 따라 생성되는 VR 라이브러리를 구축하는 것이 더욱 쉬워졌습니다.",
-  "WelcomeBrowseStore": "상점 검색",
+  "WelcomeBrowseStore": "상점 둘러보기",
   "WelcomeInstall": "게임 설치",
   "Play": "플레이"
 }
