--- a/resources/webinterface/dashboard/localization/dashboard_portuguese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_portuguese.json
@@ -2,7 +2,7 @@
   "UI_Unknown": "Desconhecido",
   "Now_Starting": "A seguir",
   "Now_Starting_HomeApp": "A regressar para",
-  "Now_Playing": "Localização atual:",
+  "Now_Playing": "A jogar:",
   "Now_Playing_HomeApp": "Início",
   "Now_Quitting": "A sair",
   "Now_Waiting": "A aguardar...",
