--- a/resources/webinterface/dashboard/localization/dashboard_swedish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_swedish.json
@@ -1,57 +1,57 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
+  "UI_Unknown": "Okänt",
+  "Now_Starting": "Nästa",
+  "Now_Starting_HomeApp": "Går tillbaka till",
+  "Now_Playing": "Spelar nu",
+  "Now_Playing_HomeApp": "Hem",
+  "Now_Quitting": "Avslutar nu",
+  "Now_Waiting": "Väntar ...",
+  "BackToApp": "Tillbaka till app",
+  "Toggle_Room_View": "Rumsvy på/av",
+  "GoHome": "Gå hem",
+  "QuitApp": "Avsluta app",
   "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "BindingCallout_Header": "Visa kontroller",
   "MutedLabel": "Tystad",
-  "MuteAudioMirror": "Mute Audio Mirror",
-  "UnmuteAudioMirror": "Unmute Audio Mirror",
-  "HeadsetVolume": "Headset Volume",
-  "AudioMirrorVolume": "Audio Mirror Volume",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
-  "MicrophoneVolume": "Microphone Volume",
+  "MuteAudioMirror": "Slå av ljudspegling",
+  "UnmuteAudioMirror": "Slå på ljudspegling",
+  "HeadsetVolume": "Headsetvolym",
+  "AudioMirrorVolume": "Ljudspeglingsvolym",
+  "MuteMicrophone": "Slå av mikrofon",
+  "UnmuteMicrophone": "Sätt på mikrofon",
+  "MicrophoneVolume": "Mikronfonvolym",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "HideKeyboardTooltip": "Hide Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games",
-  "Play": "Play"
+  "Exit_SteamVR_Home": "Avsluta SteamVR Home",
+  "Exit_Game": "Avsluta spelet",
+  "Menu": "Meny",
+  "Desktops": "Skrivbord",
+  "Volume": "Volym",
+  "X_More_Overlays": "%1$s fler överlägg",
+  "Store": "Butik",
+  "BrowseAllGames": "Bläddra bland spel",
+  "BrowseAll": "Bläddra bland alla",
+  "StoreSection_TopSingleplayer": "Populära för en spelare",
+  "StoreSection_TopMultiplayer": "Populära för flera spelare",
+  "StoreSection_TopFree": "Populära gratisspel",
+  "Library": "Bibliotek",
+  "RecentlyPlayed": "Nyligen spelade",
+  "Return_To_Game": "Tillbaka till spelet",
+  "Return_To_Home": "Tillbaka hem",
+  "Controller_Bindings": "Kontrollbindningar",
+  "App_Video_Settings": "Videoinställningar",
+  "Desktop": "Skrivbord",
+  "Desktop_X": "Skrivbord %1$s",
+  "ShowKeyboardLabel": "Tangentbord",
+  "ShowKeyboardTooltip": "Visa tangentbord",
+  "HideKeyboardTooltip": "Dölj tangentbord",
+  "Size": "Storlek",
+  "Mute": "Stäng av ljud",
+  "Unmute": "Sätt på ljud",
+  "Mute_Headset": "Ljud av för headset",
+  "Unmute_Headset": "Ljud på för headset",
+  "WelcomeHeader": "Inga spel?",
+  "WelcomeMessage": "Att bygga ett eget VR-bibliotek, som följer en även när man byter hårdvara, har aldrig varit enklare.",
+  "WelcomeBrowseStore": "Navigera i butiken",
+  "WelcomeInstall": "Installera spel",
+  "Play": "Spela"
 }
