--- a/resources/webinterface/dashboard/localization/vrmonitor_greek.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_greek.json
@@ -6,11 +6,11 @@
 	"VRMonitor_Nav_Developer": "Δημιουργός",
 	"Settings_ControllerSettings": "Ρυθμίσεις χειριστηρίου",
 	"Settings_Controller_ShowBindingCallouts": "Εμφάνιση δέσμευσης σε χειριστήρια",
-	"Settings_Controller_ShowBindingCalloutsInVR": "Εμφάνιση δέσμευσης σε χειριστήρια σε VR",
-	"Settings_Controller_AdvancedControllerSettings": "Διαχείριση δεσμεύσεων χειριστηρίου",
+	"Settings_Controller_ShowBindingCalloutsInVR": "ΕΜΦΑΝΙΣΗ ΔΕΣΜΕΥΣΗΣ ΣΕ ΧΕΙΡΙΣΤΗΡΙΑ ΣΕ VR",
+	"Settings_Controller_AdvancedControllerSettings": "ΔΙΑΧΕΙΡΙΣΗ ΔΕΣΜΕΥΣΕΩΝ ΧΕΙΡΙΣΤΗΡΙΟΥ",
 	"Settings_Controller_ControllerBindingPrompt": "Δέσμευση χειριστηρίου",
 	"Settings_Controller_DefaultBinding": "Προεπιλογή",
-	"Settings_Controller_CustomBinding": "Προσαρμογή",
+	"Settings_Controller_CustomBinding": "ΠΡΟΣΑΡΜ.",
 	"Settings_ThumbstickDeadzone_Text": "Νεκρή ζώνη μοχλού",
 	"Settings_ThumbstickDeadzone_Desc": "Προσαρμόστε τη νεκρή ζώνη σε όλους τους μοχλούς.",
 	"Settings_DominantHand": "Κύριο χέρι",
@@ -49,10 +49,10 @@
 	"Settings_Audio_Playback_Automatic_Label": "Συσκευή εξόδου ήχου",
 	"Settings_Audio_Recording_Automatic_Label": "Συσκευή εισόδου ήχου",
 	"Settings_Audio_Headset": "Headset",
-	"Settings_Audio_Manual": "Χειροκίνητο",
+	"Settings_Audio_Manual": "ΑΛΛΟ",
 	"Settings_Audio_Mirroring_Label": "Καθρεπτισμός ήχου",
 	"Settings_Audio_Mirroring_Independent_Volume_Label": "Ξεχωριστός έλεγχος κατοπτρισμού φωνής (Δοκιμή)",
-	"Settings_Audio_Default": "Προεπιλογή συστήματος",
+	"Settings_Audio_Default": "ΠΡΟΕΠΙΛΟΓΗ ΣΥΣΤΗΜΑΤΟΣ",
 	"Settings_Audio_Current_Setting_Unknown": "(Η τρέχουσα επιλεγμένη συσκευή δεν είναι παρούσα)",
 	"Settings_Audio_HDMIGain": "Μείωση κέρδους στο VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "Προχωρημένες",
@@ -85,7 +85,7 @@
 	"MenuAction_QuickCalibrate": "Γρήγορη βαθμονόμηση",
 	"MenuAction_RebootVive": "Επανεκκίνηση headset",
 	"MenuAction_RecordTrackingData": "Καταγραφή δεδομένων ανίχνευσης",
-	"MenuAction_RemoveAllSteamVRUSBDevices": "Αφαίρεση όλων των συσκευών USB SteamVR",
+	"MenuAction_RemoveAllSteamVRUSBDevices": "Αφαίρεση των συσκευών USB SteamVR",
 	"MenuAction_ResetDismissableWarnings": "Επαναφορά ειδοποιήσεων",
 	"MenuAction_SetConfigDirectory": "Ορισμός φακέλου ρυθμίσεων",
 	"MenuAction_SetLogDirectory": "Ορισμός φακέλου καταγραφών",
@@ -111,11 +111,11 @@
 	"Settings_PauseOnStandby": "Παύση VR όταν είναι αδρανές το headset",
 	"Settings_PauseOnLocked": "Παύση VR όταν είναι κλειδωμένος ο υπολογιστής",
 	"Settings_OverlayRenderQuality": "Ποιότητα σύνθεσης επικάλυψης",
-	"Settings_Auto_Parenthesized": "Αυτόματο (%1$s)",
-	"Settings_Auto": "Αυτόματο",
-	"Settings_High": "Υψηλή",
-	"Settings_Medium": "Μέτρια",
-	"Settings_Low": "Χαμηλή",
+	"Settings_Auto_Parenthesized": "ΑΥΤΟΜΑΤΑ (%1$s)",
+	"Settings_Auto": "ΑΥΤΟΜΑΤΑ",
+	"Settings_High": "ΥΨΗΛΗ",
+	"Settings_Medium": "ΜΕΤΡΙΑ",
+	"Settings_Low": "ΧΑΜΗΛΗ",
 	"Settings_Animations": "Κινήσεις",
 	"Settings_MediumSpace": "Μέσος χώρος",
 	"Settings_NightModeCheck": "Νυχτερινή λειτουργία",
@@ -126,7 +126,7 @@
 	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR πάντα στην κορυφή",
 	"Settings_StatusWindowMinimizeToTray_Text": "Όταν ελαχιστοποιείται, η κατάσταση SteamVR ελαχιστοποιείται στην περιοχή ειδοποιήσεων",
 	"Settings_SuppressWarnings_Text": "Καταστολή προειδοποιήσεων όταν η κατάσταση του SteamVR είναι ελαχιστοποιημένη",
-	"StatusCheckInterval_Never": "Ποτέ",
+	"StatusCheckInterval_Never": "ΠΟΤΕ",
 	"StatusCheckInterval_Normal": "Κανονικά (1 δευτ.)",
 	"StatusCheckInterval_Often": "Συχνά (100 ms)",
 	"StatusCheckInterval_Seldom": "Σπάνια (5 δευτ.)",
@@ -139,7 +139,7 @@
 	"Settings_Video_RefreshRate_Label_Hz": "Ρυθμός ανανέωσης (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "Υποστηρίζονται επιπλέον ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά δεν εντοπίστηκαν από το πρόγραμμα οδήγησης της κάρτας γραφικών. Βεβαιωθείτε ότι το firmware του headset σας και το πρόγραμμα οδήγησης της κάρτας γραφικών είναι ενημερωμένα.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά το SteamVR δεν μπορεί να διαχειριστεί ρυθμούς ανανέωσης όταν οι οθόνες του headset είναι σε εκτεταμένη λειτουργία.",
-	"Settings_Video_RefreshRate_EnableDirectModeAction": "Ενεργοποίηση άμεσης λειτουργίας",
+	"Settings_Video_RefreshRate_EnableDirectModeAction": "Ενεργοποίηση",
 	"Settings_Video_RefreshRate_OneSupported": "Υποστηρίζεται μόνο ένας ρυθμός ανανέωσης στο σύστημά σας.",
 	"Settings_Video_AppResFooter": "Η τρέχουσα ρύθμιση αποδίδει κάθε μάτι στο %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Εξομάλυνση κίνησης",
@@ -147,7 +147,7 @@
 	"Settings_Advanced_MotionSmoothing_Disabled": "Η εξομάλυνση κίνησης δεν υποστηρίζεται σε αυτή την έκδοση κάρτας γραφικών / οδηγού (απαιτεί υποστήριξη ασύγχρονης επαναπροβολής).",
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Η εξομάλυνση κίνησης δεν υποστηρίζεται σε παλαιότερες εκδόσεις των Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Αυτόματα",
-	"Settings_Advanced_Supersampling_Custom": "Προσαρμογή",
+	"Settings_Advanced_Supersampling_Custom": "ΠΡΟΣΑΡΜ.",
 	"Settings_Advanced_Supersampling_Header": "Ανάλυση σύνθεσης",
 	"Settings_Advanced_Supersampling_Warning": "Η παρακάτω ρύθμιση παρακάμπτει την αυτόματη ρύθμιση και επηρεάζει όλες τις εφαρμογές. Για να αλλάξετε την ανάλυση μιας συγκεκριμένης εφαρμογής, επισκεφτείτε τις ρυθμίσεις εφαρμογών.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
@@ -209,11 +209,11 @@
 	"Settings_Power_ControllerOffOnExit": "Απενεργοποίηση χειριστηρίων όταν τερματιστεί το SteamVR",
 	"Settings_General_Notifications_Label": "Ειδοποιήσεις",
 	"Settings_General_Notifications_Text": "Να επιτρέπονται ειδοποιήσεις ενώ σε VR",
-	"Settings_General_ShowBindingUI": "Επεξεργασία διάταξης χειριστηρίου",
+	"Settings_General_ShowBindingUI": "ΕΠΕΞΕΡΓΑΣΙΑ ΔΙΑΤΑΞΗΣ ΧΕΙΡΙΣΤΗΡΙΟΥ",
 	"Settings_General_ShowTrackerUI": "Διαχείριση ανιχνευτών Vive",
 	"Settings_General_Cancel": "Άκυρο",
 	"Settings_General_Confirm": "Επιβεβαίωση",
-	"Settings_General_Close": "Κλείσιμο",
+	"Settings_General_Close": "ΚΛΕΙΣΙΜΟ",
 	"Settings_General_CalibrateThumbstick": "Βαθμονόμηση μοχλού",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Συνδέστε ένα χειριστήριο με ένα μοχλό.",
 	"Settings_General_NotEnoughSamples": "Παρακαλούμε πιέστε πάνω το μοχλό τουλάχιστον ακόμα %1$s φορές για να ολοκληρωθεί η βαθμονόμηση.",
@@ -225,23 +225,23 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Ένδειξη προόδου μεγάλου πατήματος",
 	"Settings_Dashboard_Position": "Θέση μπάρας",
 	"Settings_Classic": "Κλασική",
-	"Settings_Near": "Κοντά",
-	"Settings_Middle": "Μέση",
-	"Settings_Far": "Μακριά",
+	"Settings_Near": "ΚΟΝΤΑ",
+	"Settings_Middle": "ΜΕΣΑΙΑ",
+	"Settings_Far": "ΜΑΚΡΙΑ",
 	"Settings_DesktopScale": "Κλίμακα επιτραπέζιου",
 	"Settings_DashboardScale": "Κλίμακα μπάρας",
 	"Settings_DesktopDarkMode": "Λειτουργία σκοτεινής επ. εργασίας",
 	"Settings_ToggleDarkMode": "Εναλλαγή σκοτεινής λειτουργίας",
 	"Settings_Dark": "Σκοτεινό",
-	"SettingsTime_5s": "5 δευτερόλεπτα",
-	"SettingsTime_30s": "30 δευτερόλεπτα",
+	"SettingsTime_5s": "5 ΔΕΥΤΕΡΟΛΕΠΤΑ",
+	"SettingsTime_30s": "30 ΔΕΥΤΕΡΟΛΕΠΤΑ",
 	"SettingsTime_1m": "1 λεπτό",
-	"SettingsTime_5m": "5 λεπτά",
-	"SettingsTime_10m": "10 λεπτά",
-	"SettingsTime_20m": "20 λεπτά",
-	"SettingsTime_30m": "30 λεπτά",
+	"SettingsTime_5m": "5 ΛΕΠΤΑ",
+	"SettingsTime_10m": "10 ΛΕΠΤΑ",
+	"SettingsTime_20m": "20 ΛΕΠΤΑ",
+	"SettingsTime_30m": "30 ΛΕΠΤΑ",
 	"SettingsTime_1h": "1 ώρα",
-	"SettingsTime_Never": "Ποτέ",
+	"SettingsTime_Never": "ΠΟΤΕ",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "Αλλαγή φόντου μετά από:",
 	"Settings_Chaperone_BoundsColor": "Χρώμα",
 	"Settings_Chaperone_BoundsTransparency": "Διαφάνεια",
@@ -252,11 +252,11 @@
 	"Settings_Chaperone_SuitableForMedium": "Κατάλληλο για μεσαίους χώρους παιχνιδιού.",
 	"Settings_Chaperone_SuitableForLarge": "Κατάλληλο για μεγάλους χώρους παιχνιδιού.",
 	"Settings_Chaperone_Style": "Στυλ Chaperone",
-	"Settings_Chaperone_Style_0": "Πλέγμα (Πυκνό)",
-	"Settings_Chaperone_Style_1": "Πλέγμα (Μεσαίο)",
-	"Settings_Chaperone_Style_2": "Τετράγωνα",
-	"Settings_Chaperone_Style_3": "Πλέγμα (Αραιό)",
-	"Settings_Chaperone_Style_4": "Μόνο πάτωμα",
+	"Settings_Chaperone_Style_0": "ΠΛΕΓΜΑ (ΠΥΚΝΟ)",
+	"Settings_Chaperone_Style_1": "ΠΛΕΓΜΑ (ΜΕΣΑΙΟ)",
+	"Settings_Chaperone_Style_2": "ΤΕΤΡΑΓΩΝΑ",
+	"Settings_Chaperone_Style_3": "ΠΛΕΓΜΑ (ΑΡΑΙΟ)",
+	"Settings_Chaperone_Style_4": "ΜΟΝΟ ΠΑΤΩΜΑ",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Να εμφανίζονται πάντα τα όρια πατώματος",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Appearance_Controller": "Αλλαγή του μοντέλου χειριστηρίου σας",
@@ -265,7 +265,7 @@
 	"Settings_ConnectAnHMD": "Παρακαλούμε συνδέστε ένα headset.",
 	"Settings_Loading": "Φόρτωση...",
 	"Settings_ResetToDefault": "Επαναφορά προεπιλογών",
-	"Settings_ResetPageToDefault": "Επαναφορά σελίδας σε προεπιλογή",
+	"Settings_ResetPageToDefault": "ΕΠΑΝΑΦΟΡΑ ΣΕΛΙΔΑΣ ΣΕ ΠΡΟΕΠΙΛΟΓΕΣ",
 	"Settings_ToggleButton_On": "Ενεργό",
 	"Settings_ToggleButton_Off": "Ανενεργό",
 	"Settings_ToggleButton_Disable": "Απενεργοποίηση",
@@ -293,8 +293,8 @@
 	"Settings_MustQuitApp_QuitCurrentGame_Button": "Τερματισμός παιχνιδιού",
 	"Settings_NotSupported": "Δεν υποστηρίζεται",
 	"Settings_AdvancedSettings": "Προχωρημένες ρυθμίσεις",
-	"Settings_Show": "Εμφάνιση",
-	"Settings_Hide": "Απόκρυψη",
+	"Settings_Show": "ΝΑΙ",
+	"Settings_Hide": "ΟΧΙ",
 	"Settings_ViveTracker": "Ανιχνευτής Vive",
 	"Settings_ViveTrackers": "Ανιχνευτές Vive",
 	"Settings_ViveTracker_Role": "Ρόλος ανιχνευτή",
@@ -303,22 +303,22 @@
 	"Settings_ViveTracker_Identify_NotIdentifiable": "Το Vive Tracker αδυνατεί αναγνώριση.",
 	"Settings_ViveTracker_Connected": "Συνδέθηκε",
 	"Settings_ViveTracker_Disconnected": "Αποσυνδέθηκε",
-	"Settings_PerApplication_VideoSettings": "Ρυθμίσεις γραφικών ανά εφαρμογή",
-	"Settings_ChooseStartupOverlayApps": "Επιλογή εναρκτήριων εφαρμογών επικάλυψης",
+	"Settings_PerApplication_VideoSettings": "ΡΥΘΜΙΣΕΙΣ ΓΡΑΦΙΚΩΝ ΑΝΑ ΕΦΑΡΜΟΓΗ",
+	"Settings_ChooseStartupOverlayApps": "ΕΠΙΛΟΓΗ ΕΝΑΡΚΤΗΡΙΩΝ ΕΦΑΡΜΟΓΩΝ ΕΠΙΚΑΛΥΨΗΣ",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Εκκίνησε αυτών των εφαρμογών επικάλυψης με την εκκίνηση:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Δε βρέθηκαν εφαρμογές επικάλυψης",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "ΔΕ ΒΡΕΘΗΚΑΝ ΕΦΑΡΜΟΓΕΣ ΕΠΙΚΑΛΥΨΗΣ",
 	"Settings_ActiveController": "Ενεργό χειριστήριο",
-	"Settings_EditBinding": "Επεξεργασία αυτής της διάταξης",
-	"Settings_EditBinding_ChooseAnother": "Επιλογή άλλης",
-	"Settings_ShowOldBindingUI": "Εμφάνιση παλιάς διεπαφής δεσμεύσεων",
+	"Settings_EditBinding": "ΕΠΕΞΕΡΓΑΣΙΑ ΑΥΤΗΣ ΤΗΣ ΔΙΑΤΑΞΗΣ",
+	"Settings_EditBinding_ChooseAnother": "ΕΠΙΛΟΓΗ ΑΛΛΗΣ",
+	"Settings_ShowOldBindingUI": "ΕΜΦΑΝΙΣΗ ΠΑΛΙΑΣ ΔΙΕΠΑΦΗΣ ΔΕΣΜΕΥΣΕΩΝ",
 	"Settings_ManageVideoSettingsForApp": "Διαχείριση ρυθμίσεων γραφικών για:",
 	"Settings_ManageControllerBindingSettingsForApp": "Διαχείριση δεσμεύσεων χειριστηρίου για:",
 	"Settings_ActiveControllerBinding": "Ενεργή δέσμευση χειριστηρίου",
 	"Settings_ActiveBinding": "Ενεργή δέσμευση",
-	"Settings_ShowThumbstickSettings": "Επεξεργασία ρυθμίσεων μοχλού",
+	"Settings_ShowThumbstickSettings": "ΕΠΕΞΕΡΓΑΣΙΑ ΡΥΘΜΙΣΕΩΝ ΜΟΧΛΟΥ",
 	"Settings_ThumbstickSettings": "Ρυθμίσεις μοχλού",
 	"Settings_Number_Selected": "%1$s Επιλεγμένες",
-	"Settings_Drivers_ShowDriverManagerUI": "Διαχείριση πρόσθετων",
+	"Settings_Drivers_ShowDriverManagerUI": "ΔΙΑΧΕΙΡΙΣΗ ΠΡΟΣΘΕΤΩΝ",
 	"Settings_Drivers_Number_Blocked": "%1$s αποκλεισμένοι",
 	"Settings_Drivers_Number_Disabled": "%1$s ανενεργοί",
 	"Settings_Drivers_Header": "Διαχείριση πρόσθετων SteamVR",
@@ -326,6 +326,6 @@
 	"Settings_Drivers_UnblockAll": "Άρση αποκλεισμού όλων",
 	"Settings_Drivers_UnblockAllTip": "Σημείωση: Προτείνεται η άρση αποκλεισμού και ο έλεγχος ενός προσθέτου τη φορά.",
 	"Settings_Drivers_SomeBlocked": "Λόγω πρόσφατου απρόσμενου τερματισμού, μερικά πρόσθετα SteamVR έχουν αποκλειστεί αυτόματα.",
-	"TestControllerTitle": "Έλεγχος χειριστηρίου %1$s",
+	"TestControllerTitle": "ΕΛΕΓΧΟΣ ΧΕΙΡΙΣΤΗΡΙΟΥ %1$s",
 	"TestController_NoController": "Ενεργοποιήστε ένα χειριστήριο για να το ελέγξετε."
 }
