--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -5,10 +5,10 @@
 	"VRMonitor_Nav_Help": "Aiuto",
 	"VRMonitor_Nav_Developer": "Sviluppatore",
 	"Settings_ControllerSettings": "Impostazioni del controller",
-	"Settings_Controller_ShowBindingCallouts": "Mostra associazione sui controller",
-	"Settings_Controller_ShowBindingCalloutsInVR": "Mostra associazione sui controller in VR",
-	"Settings_Controller_AdvancedControllerSettings": "Gestisci associazioni del controller",
-	"Settings_Controller_ControllerBindingPrompt": "Associazioni del controller",
+	"Settings_Controller_ShowBindingCallouts": "Mostra associazioni sui controller",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Mostra associazioni sui controller in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Gestisci associazioni controller",
+	"Settings_Controller_ControllerBindingPrompt": "Associazioni controller",
 	"Settings_Controller_DefaultBinding": "Predefinita",
 	"Settings_Controller_CustomBinding": "Personalizzata",
 	"Settings_ThumbstickDeadzone_Text": "Zona morta levette",
@@ -17,7 +17,7 @@
 	"Settings_DominantHand_Left": "Sinistra",
 	"Settings_DominantHand_Right": "Destra",
 	"Settings_Loading_CurrentBinding": "Caricamento associazioni correnti...",
-	"Settings_NeedSteamTo_ViewAndEditBindings": "Avvia Steam per visualizzare e modificare le assegnazioni.",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Avvia Steam per visualizzare e modificare le associazioni.",
 	"VRMonitor_Overview_SystemStatus_Title": "Stato del sistema",
 	"VRMonitor_Overview_DeviceStatus_Title": "Stato del dispositivo",
 	"VRMonitor_Overview_Notifications_Title": "Notifiche",
@@ -123,7 +123,7 @@
 	"Settings_ShowPlaylistMenu": "Mostra menu playlist",
 	"Settings_SmallSpace": "Spazio piccolo",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre in cima",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre visibile",
 	"Settings_StatusWindowMinimizeToTray_Text": "La finestra di stato di SteamVR verrà minimizzata nell'area di notifica",
 	"Settings_SuppressWarnings_Text": "Non mostrare avvisi e notifiche quando StramVR è minimizzato",
 	"StatusCheckInterval_Never": "Mai",
@@ -293,8 +293,8 @@
 	"Settings_MustQuitApp_QuitCurrentGame_Button": "Esci dal gioco",
 	"Settings_NotSupported": "Non supportato",
 	"Settings_AdvancedSettings": "Impostazioni avanzate",
-	"Settings_Show": "Mostra",
-	"Settings_Hide": "Nascondi",
+	"Settings_Show": "Sì",
+	"Settings_Hide": "No",
 	"Settings_ViveTracker": "Vive Tracker",
 	"Settings_ViveTrackers": "Vive Tracker",
 	"Settings_ViveTracker_Role": "Ruolo del Tracker",
@@ -304,22 +304,22 @@
 	"Settings_ViveTracker_Connected": "Connesso",
 	"Settings_ViveTracker_Disconnected": "Disconnesso",
 	"Settings_PerApplication_VideoSettings": "Impostazioni video per applicazione",
-	"Settings_ChooseStartupOverlayApps": "Scegli le app in overlay all'avvio",
+	"Settings_ChooseStartupOverlayApps": "Scegli applicazioni in overlay all'avvio",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Avvia queste app in overlay all'avvio:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Nessuna app in overlay trovata",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Nessuna applicazione in overlay trovata",
 	"Settings_ActiveController": "Controller attivo",
 	"Settings_EditBinding": "Modifica questa associazione",
 	"Settings_EditBinding_ChooseAnother": "Scegline un'altra",
-	"Settings_ShowOldBindingUI": "Mostra assegnazioni interfaccia precedenti",
+	"Settings_ShowOldBindingUI": "Mostra vecchia interfaccia associazione controlli",
 	"Settings_ManageVideoSettingsForApp": "Gestisci impostazioni video per:",
 	"Settings_ManageControllerBindingSettingsForApp": "Gestisci associazioni controller per:",
-	"Settings_ActiveControllerBinding": "Associazione controller attivo",
+	"Settings_ActiveControllerBinding": "Associazione controller attiva",
 	"Settings_ActiveBinding": "Associazione attiva",
 	"Settings_ShowThumbstickSettings": "Modifica impostazioni della levetta",
 	"Settings_ThumbstickSettings": "Impostazioni della levetta",
 	"Settings_Number_Selected": "%1$s selezionato",
 	"Settings_Drivers_ShowDriverManagerUI": "Gestisci gli add-on",
-	"Settings_Drivers_Number_Blocked": "Bloccato: %1$s",
+	"Settings_Drivers_Number_Blocked": "Bloccati: %1$s",
 	"Settings_Drivers_Number_Disabled": "Disabilitato: %1$s",
 	"Settings_Drivers_Header": "Gestisci gli add-on di SteamVR",
 	"Settings_Drivers_Unblock": "Sblocca",
