--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -227,7 +227,7 @@
 	"Settings_Classic": "クラシック",
 	"Settings_Near": "近くに表示",
 	"Settings_Middle": "中央",
-	"Settings_Far": "Far",
+	"Settings_Far": "遠距離",
 	"Settings_DesktopScale": "デスクトップスケール",
 	"Settings_DashboardScale": "ダッシュボードスケール",
 	"Settings_DesktopDarkMode": "デスクトップダークモード",
@@ -247,7 +247,7 @@
 	"Settings_Chaperone_BoundsTransparency": "透過性",
 	"Settings_Chaperone_Color": "色",
 	"Settings_Chaperone_ActivationDistance": "有効化距離（ｍ）",
-	"Settings_Chaperone_WallHeight": "Wall Height (m)",
+	"Settings_Chaperone_WallHeight": "壁の高さ（m）",
 	"Settings_Chaperone_SuitableForSmall": "小さなプレイエリアに最適。注意が必要。",
 	"Settings_Chaperone_SuitableForMedium": "中程度のプレイエリアに最適。",
 	"Settings_Chaperone_SuitableForLarge": "大きなプレイエリアに最適。",
