--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -109,7 +109,7 @@
 	"Settings_LockedModeCheck": "Modo bloqueado",
 	"Settings_LockedModeDesc": "Permitir renderização para o headset enquanto o computador estiver bloqueado.",
 	"Settings_PauseOnStandby": "Pausar R.V. se headset estiver inativo",
-	"Settings_PauseOnLocked": "Pausar R.V. enquanto o computer estiver bloqueado",
+	"Settings_PauseOnLocked": "Pausar R.V. enquanto o computador estiver bloqueado",
 	"Settings_OverlayRenderQuality": "Qualidade de renderização de interfaces",
 	"Settings_Auto_Parenthesized": "Autom. (%1$s)",
 	"Settings_Auto": "Autom.",
@@ -293,8 +293,8 @@
 	"Settings_MustQuitApp_QuitCurrentGame_Button": "Sair do jogo",
 	"Settings_NotSupported": "Incompatível",
 	"Settings_AdvancedSettings": "Definições avançadas",
-	"Settings_Show": "Mostrar",
-	"Settings_Hide": "Ocultar",
+	"Settings_Show": "Ver",
+	"Settings_Hide": "Omitir",
 	"Settings_ViveTracker": "Detetor Vive",
 	"Settings_ViveTrackers": "Detetores Vive",
 	"Settings_ViveTracker_Role": "Função do detetor",
