--- a/resources/webinterface/dashboard/localization/webhelper_greek.json
+++ b/resources/webinterface/dashboard/localization/webhelper_greek.json
@@ -10,7 +10,7 @@
 	"Button_Discard": "Απόρριψη",
 	"Button_Save": "Αποθήκευση",
 	"Button_Done": "ΟΚ",
-	"Button_Back": "Πίσω",
+	"Button_Back": "ΠΙΣΩ",
 	"Button_Next": "Επόμενο",
 	"Button_Retry": "Επανάληψη",
 	"Settings": "Ρυθμίσεις",
@@ -18,7 +18,7 @@
 	"PowerMenuTurnOffController": "Απενεργοποίηση χειριστηρίου",
 	"PowerMenuQuitSceneApp": "Έξοδος από %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Έξοδος",
-	"PowerMenuExitVR": "Έξοδος από VR",
+	"PowerMenuExitVR": "ΕΞΟΔΟΣ ΑΠΟ VR",
 	"PowerMenuCancel": "Άκυρο",
 	"PowerMenuSteamOverlay": "Steam",
 	"PowerMenuHeader": "Μενού ενέργειας",
