--- a/resources/webinterface/dashboard/localization/webhelper_korean.json
+++ b/resources/webinterface/dashboard/localization/webhelper_korean.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "완료",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "고정 원점 재설정",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
