--- a/resources/webinterface/dashboard/localization/bindingui_russian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_russian.json
@@ -107,7 +107,7 @@
   "SourceInputMode_ForceHoldThreshold_tooltip": "Уровень давления для активации действия (как правило ёмкостный датчик реагирует первым).",
   "SourceInputMode_ForceReleaseThreshold_tooltip": "Уровень спущенного давления для деактивации действия.",
   "SourceInputMode_DowngradeSpeed_tooltip": "Максимальная скорость (м/с) контроллера, при которой после преодоления порога усилия при захвате он сохраняется, но порог ёмкостного датчика только проходится.",
-  "SourceInputMode_DropSpeed_tooltip": "The minimum speed (m/s) your controller can be moving to force a drop when you have released pressure but haven't passed the cap sense deactivation threshold.",
+  "SourceInputMode_DropSpeed_tooltip": "Минимальная скорость (м/сек), с которой можно перемещать контроллер, чтобы спровоцировать выброс, когда вы спустили давление, но не перешли пограничное значение деактивации чувствительности.",
   "SourceInputMode_ScalarValue_tooltip": "Sets a analog action based on a boolean value. (ex. Sets a trigger pull to 1 when the A button is pressed)",
   "SourceInputMode_ScalarOnX_tooltip": "The analog X value to set when this control is engaged. (ex. button down)",
   "SourceInputMode_ScalarOffX_tooltip": "The analog X value to set when this control is disengaged. (ex. button up)",
@@ -115,13 +115,13 @@
   "SourceInputMode_ScalarOffY_tooltip": "The analog Y value to set when this control is disengaged. (ex. button up)",
   "SourceInputMode_ScalarOnZ_tooltip": "The analog Z value to set when this control is engaged. (ex. button down)",
   "SourceInputMode_ScalarOffZ_tooltip": "The analog Z value to set when this control is disengaged. (ex. button up)",
-  "SourceInputMode_HapticAmplitude_tooltip": "How strong the haptic will be.",
-  "SourceInputMode_HapticDuration_tooltip": "How long the haptic will last.",
+  "SourceInputMode_HapticAmplitude_tooltip": "Какой сильной будет отдача.",
+  "SourceInputMode_HapticDuration_tooltip": "Как долго продлится отдача.",
   "SourceInputMode_HapticFrequency_tooltip": "How often the haptic will hit during the duration.",
   "SourceInputMode_ScrollMode_tooltip": "The type of scroll you'd like to use (trackpad or mouse wheel)",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio_tooltip": "The aspect ratio that you want the usable surface of the trackpad to be in. (w/h)",
   "SourceInputMode_SmoothScroll_Multiplier_tooltip": "How much each movement will scroll.",
-  "SourceInputMode_SmoothScroll_AccelerationPower_tooltip": "How fast the scrolling will increase in speed",
+  "SourceInputMode_SmoothScroll_AccelerationPower_tooltip": "Как быстро ускорится прокрутка",
   "SourceInputMode_SmoothScroll_NotchesPerTouchpad_tooltip": "How many times should the haptic fire when sliding your finger over the length of the touchpad.",
   "SourceInputMode_SmoothScroll_StartDistance_tooltip": "The minimum amount you need to scroll for a value to be reported.",
   "SourceInputMode_SmoothScroll_MinThrowVelocity_tooltip": "The minimum velocity you can flick the touchpad.",
@@ -155,7 +155,7 @@
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "The area of the trackpad at the top that scroll holds will engage.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "The area of the trackpad at the bottom that scroll holds will engage.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "Generate haptic pulses for held scroll ticks.",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "How fast to scroll.",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "Как быстро прокручивать.",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor_tooltip": "How much to scroll each increment.",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "The side to side percentage that the stick will not scroll.",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "The top to bottom percentage that the stick will not scroll.",
