--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -5,19 +5,19 @@
 	"VRMonitor_Nav_Help": "Справка",
 	"VRMonitor_Nav_Developer": "Разработчик",
 	"Settings_ControllerSettings": "Настройки контроллера",
-	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
-	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_ShowBindingCallouts": "Показать раскладку на контроллерах",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Показать раскладку на контроллерах в VR",
 	"Settings_Controller_AdvancedControllerSettings": "Управление настройками контроллера",
 	"Settings_Controller_ControllerBindingPrompt": "Настройки контроллера",
 	"Settings_Controller_DefaultBinding": "По умолчанию",
 	"Settings_Controller_CustomBinding": "Пользовательские",
 	"Settings_ThumbstickDeadzone_Text": "Мёртвая зона стика",
-	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
-	"Settings_DominantHand": "Доминантная рука",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
-	"Settings_Loading_CurrentBinding": "Loading current binding...",
-	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
+	"Settings_ThumbstickDeadzone_Desc": "Отрегулировать мёртвую зону на всех стиках.",
+	"Settings_DominantHand": "Основная рука",
+	"Settings_DominantHand_Left": "Левая",
+	"Settings_DominantHand_Right": "Правая",
+	"Settings_Loading_CurrentBinding": "Загрузка текущей раскладки...",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Запустить Steam, чтобы просмотреть и отредактировать раскладки.",
 	"VRMonitor_Overview_SystemStatus_Title": "Состояние системы",
 	"VRMonitor_Overview_DeviceStatus_Title": "Состояние устройства",
 	"VRMonitor_Overview_Notifications_Title": "Уведомления",
@@ -48,16 +48,16 @@
 	"Settings_BaseStationSettings": "Настройки базовых станций",
 	"Settings_Audio_Playback_Automatic_Label": "Устройство вывода звука",
 	"Settings_Audio_Recording_Automatic_Label": "Устройство ввода звука",
-	"Settings_Audio_Headset": "Headset",
-	"Settings_Audio_Manual": "Manual",
+	"Settings_Audio_Headset": "Гарнитура",
+	"Settings_Audio_Manual": "Ручная настройка",
 	"Settings_Audio_Mirroring_Label": "Отражение звука",
 	"Settings_Audio_Mirroring_Independent_Volume_Label": "Отдельная громкость дублируемого звука (бета)",
-	"Settings_Audio_Default": "System Default",
-	"Settings_Audio_Current_Setting_Unknown": "(выбранное в данный момент устройство отсутствует)",
+	"Settings_Audio_Default": "По умолчанию",
+	"Settings_Audio_Current_Setting_Unknown": "(выбранное устройство отсутствует)",
 	"Settings_Audio_HDMIGain": "Функция снижения усиления на аудио-интерфейсе HDMI VIVE",
 	"Settings_SectionTitle_Advanced": "Расширенные",
 	"Settings_SectionTitle_Developer": "Разработчик",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Главное меню",
 	"Settings_SectionTitle_General": "Общие",
 	"Settings_SectionTitle_Applications": "Приложения",
 	"Settings_SectionTitle_Audio": "Аудио",
@@ -65,11 +65,11 @@
 	"Settings_SectionTitle_Camera": "Камера",
 	"Settings_SectionTitle_Bluetooth": "Bluetooth",
 	"Settings_SectionTitle_Power": "Питание",
-	"Settings_SectionTitle_StartupShutdown": "Startup / Shutdown",
+	"Settings_SectionTitle_StartupShutdown": "Вкл/Выкл",
 	"Settings_SectionTitle_Home": "Главная страница",
 	"Settings_SectionTitle_PlayArea": "Игровая зона",
 	"Settings_SectionTitle_BaseStation": "Базовые станции",
-	"Settings_SectionTitle_Controller": "Controllers",
+	"Settings_SectionTitle_Controller": "Контроллеры",
 	"Advanced_AllowSavingOfTimingInfo": "Разрешить сохранение информации о времени",
 	"Advanced_AutoSaveTimingInfoOnExit": "Автоматически сохранять информацию о времени при выходе",
 	"Settings_EnableWebHelperDebugger": "Включить отладчик Web Helper",
@@ -93,28 +93,28 @@
 	"Settings_Advanced_Paths_Header": "Пути",
 	"Settings_Advanced_Reset_Header": "Сброс",
 	"Settings_Advanced_Status_Header": "Проверка состояния",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Показать настройки",
+	"Settings_ShowPowerMenu": "Показать варинаты питания",
+	"Settings_AllowAppQuitting": "Разрешить приложению выходить из меню",
+	"Settings_ShowDesktopViews": "Показать вкладки рабочего стола",
 	"Settings_CheckForSteam": "Проверить соединение со Steam",
 	"Settings_DebugInputBindings": "Показывать опции отладки в интерфейсе настроек управления",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
-	"Settings_FadeToGrid": "Fade To Grid on app hang",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
-	"Settings_HomeAppCheck": "SteamVR Home",
+	"Advanced_GlobalActionSetPriority": "Разрешить общий ввод из оверлеев (экспериментальная функция)",
+	"Settings_FadeToGrid": "Отображать сетку при зависании приложения",
+	"Settings_EnableDashboard": "Навигационное меню виртуальной реальности по кнопке System",
+	"Settings_EnableDashboardDesc": "Разрешить вызов навигационного меню виртуальной реальности по нажатию кнопки System.",
+	"Settings_HomeAppCheck": "Домашний мир SteamVR",
 	"Settings_HomeAppDesc": "Наслаждайтесь виртуальными игровыми мирами, новыми социальными функциями и многим другим.",
 	"Settings_LargeSpace": "Большое пространство",
 	"Settings_LockedModeCheck": "Режим блокировки",
 	"Settings_LockedModeDesc": "Разрешить рендеринг в шлеме, когда компьютер заблокирован.",
-	"Settings_PauseOnStandby": "Pause VR when headset is idle",
-	"Settings_PauseOnLocked": "Pause VR when computer is locked",
+	"Settings_PauseOnStandby": "Останавливать VR, когда гарнитура не активна",
+	"Settings_PauseOnLocked": "Останавливать VR, когда копьютер заблокирован",
 	"Settings_OverlayRenderQuality": "Качество рендеринга оверлея",
 	"Settings_Auto_Parenthesized": "Авто (%1$s)",
 	"Settings_Auto": "Авто",
 	"Settings_High": "Высокое",
-	"Settings_Medium": "Средние",
+	"Settings_Medium": "Среднее",
 	"Settings_Low": "Низкое",
 	"Settings_Animations": "Анимации",
 	"Settings_MediumSpace": "Среднее пространство",
@@ -123,7 +123,7 @@
 	"Settings_ShowPlaylistMenu": "Показать меню плейлиста",
 	"Settings_SmallSpace": "Небольшое пространство",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "Всегда показывать SteamVR поверх других окон",
 	"Settings_StatusWindowMinimizeToTray_Text": "Сворачивать окно состояния SteamVR в панель задач",
 	"Settings_SuppressWarnings_Text": "Отключать предупреждения и объявления при свёрнутом статусе SteamVR",
 	"StatusCheckInterval_Never": "Никогда",
@@ -140,12 +140,12 @@
 	"Settings_Video_RefreshRate_NotFound": "Шлем поддерживает дополнительные частоты обновления, однако драйвер видеокарты их не обнаружил. Пожалуйста, убедитесь, что прошивка шлема и драйвер видеокарты обновлены.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "Шлем поддерживает дополнительные частоты обновления, однако SteamVR не может ими управлять, когда шлем находится в расширенном режиме.",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "Включить прямой режим",
-	"Settings_Video_RefreshRate_OneSupported": "Только одна частота обновления поддерживается в вашей системе.",
+	"Settings_Video_RefreshRate_OneSupported": "Ваша система поддерживает только одну частоту обновления.",
 	"Settings_Video_AppResFooter": "Разрешение для каждого глаза при текущих настройках: %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Сглаживание движений",
 	"Settings_Advanced_MotionSmoothing_Description": "Создаёт кадры с достаточной частотой, когда запущенное предложение с этим не справляется.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Сглаживание движения не поддерживается этой видеокартой/версии драйвеов (требуется поддержка асинхронной репроекции).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Сглаживание движения не поддерживается на старых версиях Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Авто",
 	"Settings_Advanced_Supersampling_Custom": "Польз.",
 	"Settings_Advanced_Supersampling_Header": "Разрешение рендеринга",
@@ -175,8 +175,8 @@
 	"Settings_PerApplication_Reprojection_Header": "Rепроекция",
 	"Settings_PerApplication_Reprojection_Checkbox": "Использовать классический режим репроекции",
 	"Settings_PerApplication_Reprojection_Description": "Выбор этой опции отключит асинхронную репроекцию для этой игры.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
-	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Обновить частоту смены",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Выбор этой опции позволит указать частоту обновления, отличную от исходных настроек для данного приложения.",
 	"Settings_MimeTypes_Pancake_Header": "Выберите приложение, в котором необходимо запустить 2D-приложения",
 	"Settings_Camera_EnableCamera": "Включить камеру",
 	"Settings_Camera_AllowCameraInDashboard": "Показать камеру на контроллере",
@@ -190,8 +190,8 @@
 	"Settings_Camera_CompatibilityExplanation": "Если отслеживание не функционирует, возможно, вам следует понизить частоту обновления камеры, отключить камеру или попытаться подключиться к другому USB-порту.",
 	"Advanced_Appearance": "Внешний вид",
 	"Settings_Appearance_Background": "Фон",
-	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
-	"Settings_Appearance_Background_Select": "Change Background",
+	"Settings_Appearance_Background_NoSteam": "Запустите Steam, чтобы увидеть другие фоны.",
+	"Settings_Appearance_Background_Select": "Сменить фон",
 	"Settings_Appearance_BackgroundDesc": "Выбрать фон для пространства по умолчанию",
 	"Settings_Appearance_UseDomeProjection": "Использовать купольную проекцию",
 	"Settings_Appearance_UseDomeProjectionDesc": "Изменяет стиль проекции фонового изображения. Эта функция используется с некоторыми фонами для большего эффекта погружения. Если изображение выбранного вами фона искажено, включите её",
@@ -214,25 +214,25 @@
 	"Settings_General_Cancel": "Отмена",
 	"Settings_General_Confirm": "Подтвердить",
 	"Settings_General_Close": "Закрыть",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
-	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
-	"Settings_General_NotEnoughSamples": "Нажмите на стик по крайней мере ещё %1$s раз, чтобы завершить калибровку.",
+	"Settings_General_CalibrateThumbstick": "Откалибровать стик",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Подключить контроллер к стику.",
+	"Settings_General_NotEnoughSamples": "Нажмите на стик не менее %1$s раз, чтобы завершить калибровку.",
 	"Settings_General_InviteMoreSamples": "Рассчитан угол %1$s°. Удерживайте нажатие, чтобы уточнить это значение, или нажмите «Подтвердить», чтобы принять калибровку.",
 	"Settings_General_LeftThumbstickAngle": "Угол левого стика: %1$s°",
 	"Settings_General_RightThumbstickAngle": "Угол правого стика: %1$s°",
-	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
-	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
-	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
-	"Settings_Dashboard_Position": "Dashboard Position",
-	"Settings_Classic": "Classic",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Угол левого стика",
+	"Settings_General_RightThumbstickAngle_NoValue": "Угол правого стика",
+	"Settings_Dashboard_ShowProgressIndicator": "Указатель прогресса при долгом нажатии",
+	"Settings_Dashboard_Position": "Расположение меню",
+	"Settings_Classic": "Классическое",
 	"Settings_Near": "Близко",
 	"Settings_Middle": "Средне",
 	"Settings_Far": "Далеко",
-	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DesktopScale": "Размер рабочего стола",
 	"Settings_DashboardScale": "Размер панели навигации",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Тёмный режим рабочего стола",
+	"Settings_ToggleDarkMode": "Включить/выключить тёмный режим",
+	"Settings_Dark": "Тёмный",
 	"SettingsTime_5s": "5 секунд",
 	"SettingsTime_30s": "30 секунд",
 	"SettingsTime_1m": "1 минуту",
@@ -263,9 +263,9 @@
 	"Settings_Appearance_Base": "Изменить модель базовой станции",
 	"Settings_Appearance_Environment": "Изменить домашний игровой мир",
 	"Settings_ConnectAnHMD": "Пожалуйста, подключите шлем.",
-	"Settings_Loading": "Loading...",
+	"Settings_Loading": "Загрузка...",
 	"Settings_ResetToDefault": "Восстановить по умолчанию",
-	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ResetPageToDefault": "Восстановить страницу по умолчанию",
 	"Settings_ToggleButton_On": "Вкл.",
 	"Settings_ToggleButton_Off": "Выкл.",
 	"Settings_ToggleButton_Disable": "Отключить",
@@ -278,7 +278,7 @@
 	"CameraTest_CameraFailed": "Сбой связи с камерой",
 	"CameraTest_TrackingFailed": "Сбой отслеживания с включённой камерой",
 	"CameraTest_Success": "Проверка камеры успешно завершена",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Проверка камеры",
 	"CameraTestStatus_Evaluating": "Проверка",
 	"CameraTestStatus_Success": "Готово",
 	"CameraTestStatus_Failure": "Ошибка",
@@ -287,37 +287,37 @@
 	"CameraRoomViewMode_EdgeB": "Цветные очертания",
 	"CameraRoomViewMode_VideoTranslucent": "Полупрозрачный обзор окружения",
 	"CameraRoomViewMode_VideoOpaque": "Непрозрачный обзор окружения",
-	"Settings_MustRestart_Description": "Необходимо перезапустить SteamVR, чтобы изменения вступили в силу.",
-	"Settings_MustRestart_RestartSteamVR_Button": "Перезапустить SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
-	"Settings_NotSupported": "Not Supported",
+	"Settings_MustRestart_Description": "Необходимо перезагрузить SteamVR, чтобы изменения вступили в силу.",
+	"Settings_MustRestart_RestartSteamVR_Button": "Перезагрузить SteamVR",
+	"Settings_MustQuitApp_Description": "Выйдите из игры, чтобы изменения вступили в силу.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Выйти из игры",
+	"Settings_NotSupported": "Не поддерживается",
 	"Settings_AdvancedSettings": "Расширенные настройки",
-	"Settings_Show": "Show",
-	"Settings_Hide": "Hide",
+	"Settings_Show": "Показать",
+	"Settings_Hide": "Скрыть",
 	"Settings_ViveTracker": "Трекер Vive",
 	"Settings_ViveTrackers": "Трекеры Vive",
-	"Settings_ViveTracker_Role": "Tracker Role",
-	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Role": "Тип трекера",
+	"Settings_ViveTracker_Hand": "Рука",
 	"Settings_ViveTracker_Identify_NotConnected": "Трекер Vive не подключен.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
-	"Settings_ViveTracker_Connected": "Connected",
-	"Settings_ViveTracker_Disconnected": "Disconnected",
-	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Трекер Vive не способен к идентификации.",
+	"Settings_ViveTracker_Connected": "Подключено",
+	"Settings_ViveTracker_Disconnected": "Нет соединения",
+	"Settings_PerApplication_VideoSettings": "Настройки видео для приложения",
 	"Settings_ChooseStartupOverlayApps": "Выберите приложения оверлея при запуске",
-	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Запускать эти приложения оверлея при старте:",
 	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Приложения оверлея не найдены",
-	"Settings_ActiveController": "Active Controller",
-	"Settings_EditBinding": "Edit This Binding",
-	"Settings_EditBinding_ChooseAnother": "Choose Another",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
-	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
-	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
-	"Settings_ActiveControllerBinding": "Active Controller Binding",
-	"Settings_ActiveBinding": "Active Binding",
-	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ActiveController": "Активный контроллер",
+	"Settings_EditBinding": "Редактировать раскладку",
+	"Settings_EditBinding_ChooseAnother": "Выбрать другую",
+	"Settings_ShowOldBindingUI": "Показать старую раскладку",
+	"Settings_ManageVideoSettingsForApp": "Управление настройками видео для:",
+	"Settings_ManageControllerBindingSettingsForApp": "Управление настройками контроллера для:",
+	"Settings_ActiveControllerBinding": "Активная раскладка контроллера",
+	"Settings_ActiveBinding": "Активная раскладка",
+	"Settings_ShowThumbstickSettings": "Редактировать настройки стика",
 	"Settings_ThumbstickSettings": "Настройки стика",
-	"Settings_Number_Selected": "%1$s Selected",
+	"Settings_Number_Selected": "Выбрано: %1$s",
 	"Settings_Drivers_ShowDriverManagerUI": "Управление дополнениями",
 	"Settings_Drivers_Number_Blocked": "Заблокировано: %1$s",
 	"Settings_Drivers_Number_Disabled": "Выключено: %1$s",
